testsuite/resolution/compile-fail/builtin-body.verona
class Main {
  // CHECK-L: builtin-body.verona:${LINE:+1}:11: error: Builtin method 'foo' in 'Main' must not have a body
  builtin foo() { }
}
